--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ Black           900
 
 /*------------------------------IMAGES------------------------------*/
 .background-img {
-    background-image: url(/simple-feature-section/img/Background_image.svg);
+    background-image: url(/img/Background_image.svg);
     background-color: #121826;
 }
 
